--- a/index.html
+++ b/index.html
@@ -322,10 +322,38 @@
       .table-container{overflow-x:auto;-webkit-overflow-scrolling:touch}
       table{min-width:700px}
 
-      /* Invoice overlay */
-      .overlay{padding:0}
-      .invoice-page{border-radius:0;min-height:100vh}
-      .invoice-topbar{padding:10px 12px;flex-wrap:wrap;gap:8px}
+      /* Invoice overlay — compact bottom-sheet on mobile */
+      .overlay{
+        padding:0;
+        overflow-y:auto;
+        align-items:flex-end;
+        justify-content:stretch
+      }
+      .overlay.open{display:flex}
+      .invoice-page{
+        border-radius:16px 16px 0 0;
+        min-height:unset;
+        height:72vh;
+        max-height:72vh;
+        overflow-y:auto;
+        width:92%;
+        max-width:480px;
+        margin:0 auto;
+        box-shadow:0 -4px 30px rgba(0,0,0,.2);
+        animation:slideUp .28s cubic-bezier(.32,1,.4,1)
+      }
+      @keyframes slideUp{from{transform:translateY(60px);opacity:0}to{transform:translateY(0);opacity:1}}
+      /* Drag handle */
+      .invoice-page::before{
+        content:'';display:block;width:40px;height:4px;
+        background:#d1d5db;border-radius:2px;
+        margin:12px auto 0;flex-shrink:0
+      }
+      .invoice-topbar{
+        padding:10px 12px;flex-wrap:wrap;gap:6px;
+        position:sticky;top:0;z-index:10;background:#fff;
+        border-bottom:1px solid #e5e5e5
+      }
       .inv-topbar-right{gap:4px;flex-wrap:wrap}
       .inv-btn,.send-btn,.inv-ebm-btn{padding:6px 9px;font-size:11px}
 
