--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       /* Invoice overlay — compact bottom-sheet on mobile */
       .overlay{
         padding:0;
-        overflow-y:hidden;
+        overflow-y:auto;
         align-items:flex-end;
         justify-content:stretch
       }
@@ -333,8 +333,6 @@
       .invoice-page{
         border-radius:16px 16px 0 0;
         min-height:unset;
-        height:72vh;
-        max-height:72vh;
         overflow-y:auto;
         width:92%;
         max-width:480px;
