--- a/index.html
+++ b/index.html
@@ -866,8 +866,8 @@
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="19" y1="12" x2="5" y2="12"/><polyline points="12 19 5 12 12 5"/></svg>Back
     </button>
     <div class="form-card">
-      <h2>New Visit Information</h2>
-      <p class="form-subtitle">Add new visit information</p>
+      <h2>Edit Visit Information</h2>
+    
       <div class="form-group-nv"><label>Department</label><select><option value="">Select a department</option><option>General Medicine</option><option>Pediatrics</option><option>Cardiology</option><option>Orthopedics</option><option>Dermatology</option></select></div>
       <div class="form-group-nv"><label>Preferred Doctor (optional)</label><select><option value="">Select doctor</option><option>Dr. Jacob Ryan</option><option>Dr. Amina Otieno</option><option>Dr. Chen Wei</option></select></div>
       <div class="form-group-nv"><label>Insurance</label><select><option value="">Select insurance</option><option>RSSB</option><option>MMI</option><option>RADIANT</option><option>Private</option></select></div>
@@ -2024,3 +2024,4 @@ function closeSidebar() {
 </script>
 </body>
 </html>
+
